--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
       <div class="image">
         <!--Poner la foto con el nombre de la clase-->
         <img
-          src="images/paralelo.png"
+          src="images/Agile/poster.png"
           alt=""
           height="100"
           width="100"
-          data-position="100% center"
+          data-position="50% center"
+          style="object-fit: cover;"
         />
       </div>
       <div class="content">
@@ -62,22 +63,25 @@
           <header>
             <!--Apuntar al html con el nombre de la clase-->
             <h2>
-              <a href="sites/Algoritmos_Paralelos.html">Algoritmos Paralelos</a>
+              <a href="sites/agile.html">Agile</a>
             </h2>
             <!--Fecha de la clase-->
-            <p class="info">07 de Mayo de 2020</p>
+            <p class="info">26 de Octubre de 2020</p>
           </header>
           <!--Pequeña descripcion del tema-->
           <p align="justify">
-            La computación paralela es el uso de múltiples recursos
-            computacionales para resolver un problema. Se distingue de la
-            computación secuencial en que varias operaciones pueden ocurrir
-            simultáneamente.
+            Es una serie de métodos y metodologías que ayudan a un equipo a
+            pensar de una manera más eficiente, eficaz y tomar decisiones que
+            como resultado sean productivas. También es una mentalidad, porque
+            la mentalidad correcta puede marcar una gran diferencia en cómo un
+            equipo utiliza las prácticas. Esta mentalidad ayuda a las personas
+            de un equipo a compartir información entre ellos, para que puedan
+            tomar decisiones importantes del proyecto juntos.
           </p>
           <ul class="actions">
             <!--Apuntar al html con el nombre de la clase-->
             <li>
-              <a href="sites/Algoritmos_Paralelos.html" class="button alt"
+              <a href="sites/agile.html" class="button alt"
                 >Leer Mas</a
               >
             </li>
