--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
           <li><a href="#dos"></a></li>
           <li><a href="#tres"></a></li>
           <li><a href="#cuatro"></a></li>
+          <li><a href="#cinco"></a></li>
+          <li><a href="#seis"></a></li>
+          <li><a href="#siete"></a></li>
+          <li><a href="#ocho"></a></li>
         </ol>
       </div>
     </section>
@@ -245,6 +249,213 @@
           ></a>
           <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
           <a href="#cinco" class="scrolly next"
+            ><span class="icon fa-chevron-down"></span
+          ></a>
+        </div>
+      </div>
+    </article>
+    <!-- cinco -->
+    <!--Cambiar id por el numero de clase-->
+    <!--Cambiar clase style1 por style2 o style3 para cambiar de color de texto -->
+    <article id="cinco" class="post style1">
+      <div class="image">
+        <!--Poner la foto con el nombre de la clase-->
+        <img
+          src="images/Agile/poster.png"
+          alt=""
+          height="100"
+          width="100"
+          data-position="50% center"
+          style="object-fit: cover;"
+        />
+      </div>
+      <div class="content">
+        <div class="inner">
+          <header>
+            <!--Apuntar al html con el nombre de la clase-->
+            <h2>
+              <a href="sites/agile.html">Agile</a>
+            </h2>
+            <!--Fecha de la clase-->
+            <p class="info">26 de Octubre de 2020</p>
+          </header>
+          <!--Pequeña descripcion del tema-->
+          <p align="justify">
+            Es una serie de métodos y metodologías que ayudan a un equipo a
+            pensar de una manera más eficiente, eficaz y tomar decisiones que
+            como resultado sean productivas. También es una mentalidad, porque
+            la mentalidad correcta puede marcar una gran diferencia en cómo un
+            equipo utiliza las prácticas. Esta mentalidad ayuda a las personas
+            de un equipo a compartir información entre ellos, para que puedan
+            tomar decisiones importantes del proyecto juntos.
+          </p>
+          <ul class="actions">
+            <!--Apuntar al html con el nombre de la clase-->
+            <li>
+              <a href="sites/agile.html" class="button alt"
+                >Leer Mas</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="postnav">
+          <!--Poner el numero de id anterior-->
+          <a href="#cuatro" class="prev disabled"
+            ><span class="icon fa-chevron-up"></span
+          ></a>
+          <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+          <a href="#seis" class="scrolly next"
+            ><span class="icon fa-chevron-down"></span
+          ></a>
+        </div>
+      </div>
+    </article>
+
+    <!-- sies -->
+    <!--Cambiar id por el numero de clase-->
+    <!--Cambiar clase style1 por style2 o style3 para cambiar de color de fondo -->
+    <article id="sies" class="post invert style1 alt">
+      <div class="image">
+        <img src="images/threads.jpg" alt="" data-position="10% center" />
+      </div>
+      <div class="content">
+        <div class="inner">
+          <header>
+            <!--Apuntar al html con el nombre de la clase-->
+            <h2>
+              <a href="sites/Hilos y Sincronizacion.html"
+                >Hilos y Sincronización</a
+              >
+            </h2>
+            <!--Fecha de la clase-->
+            <p class="info">10 de Mayo de 2020</p>
+          </header>
+          <!--Pequeña descripcion del tema-->
+          <p>
+            Hilo (Thread): Un thread se puede considerar como la agrupación de
+            un trozo de programa junto con el conjunto de registros del
+            procesador que utiliza y una pila de máquina.<br />
+            Sincronización: Hablamos de la sincronización de datos como el
+            proceso de alineación entre los datos provenientes de diversas
+            fuentes, y su continua armonización en el tiempo.
+          </p>
+          <ul class="actions">
+            <!--Apuntar al html con el nombre de la clase-->
+            <li>
+              <a href="sites/Hilos y Sincronizacion.html" class="button alt"
+                >Leer mas</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="postnav">
+          <!--Poner el numero de id anterior-->
+          <a href="#cinco" class="scrolly prev"
+            ><span class="icon fa-chevron-up"></span
+          ></a>
+          <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+          <a href="#siete" class="scrolly next"
+            ><span class="icon fa-chevron-down"></span
+          ></a>
+        </div>
+      </div>
+    </article>
+
+    <!-- siete -->
+    <!--Cambiar id por el numero de clase-->
+    <!--Cambiar clase style1 por style2 o style3 para cambiar de color de texto -->
+    <article id="siete" class="post style2">
+      <div class="image">
+        <!--Poner la foto con el nombre de la clase-->
+        <img src="images/ejec.jpg" alt="" data-position="75% center" />
+      </div>
+      <div class="content">
+        <div class="inner">
+          <header>
+            <!--Apuntar al html con el nombre de la clase-->
+            <h2><a href="sites/generic.html">Ejecutores y Fork/Join</a></h2>
+            <!--Fecha de la clase-->
+            <p class="info">15 de Mayo del 2020</p>
+          </header>
+          <!--Pequeña descripcion del tema-->
+          <p align="justify">
+            Los ejecutores son un tipo de datos que viene implementado por Java
+            y tiene como objetivo la reutilización de los hilos. El framework
+            Fork/Join fue diseñado para la ejecución de tareas que pueden
+            dividirse en otras subtareas más pequeñas, ejecutándose estas en
+            paralelo y combinando posteriormente sus resultados para obtener el
+            resultado de la tarea única.
+          </p>
+          <ul class="actions">
+            <!--Apuntar al html con el nombre de la clase-->
+            <li>
+              <a href="sites/Ejecutores.html" class="button alt">Leer Más</a>
+            </li>
+          </ul>
+        </div>
+        <div class="postnav">
+          <!--Poner el numero de id anterior-->
+          <a href="#seis" class="scrolly prev"
+            ><span class="icon fa-chevron-up"></span
+          ></a>
+          <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+          <a href="#ocho" class="scrolly next"
+            ><span class="icon fa-chevron-down"></span
+          ></a>
+        </div>
+      </div>
+    </article>
+
+    <!-- ocho -->
+    <!--Cambiar id por el numero de clase-->
+    <!--Cambiar clase style1 por style2 o style3 para cambiar de color de fondo -->
+    <article id="ocho" class="post invert style2 alt">
+      <div class="image">
+        <img
+          src="images/4.jpg"
+          alt=""
+          width="70%"
+          height="159"
+          data-position="20% center"
+        />
+      </div>
+      <div class="content">
+        <div class="inner">
+          <header>
+            <!--Apuntar al html con el nombre de la clase-->
+            <h2>
+              <a href="sites/RPC y RMI,TCP IP.html">RPC y RMI; TCP /IP</a>
+            </h2>
+            <!--Fecha de la clase-->
+            <p class="info">22 de Mayo de 2020</p>
+          </header>
+          <!--Pequeña descripcion del tema-->
+          <p align="justify">
+            RPC y RMI son los mecanismos que permiten a un cliente invocar el
+            procedimiento o método desde el servidor mediante el establecimiento
+            de la comunicación entre el cliente y el servidor.
+          </p>
+          <p align="justify">
+            TCP/IP es la identificación del grupo de protocolos de red que hacen
+            posible la transferencia de datos en redes, entre equipos
+            informáticos e internet.
+          </p>
+          <ul class="actions">
+            <!--Apuntar al html con el nombre de la clase-->
+            <li>
+              <a href="sites/RPC y RMI,TCP IP.html" class="button alt"
+                >Leer mas</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="postnav">
+          <!--Poner el numero de id anterior-->
+          <a href="#siete" class="scrolly prev"
+            ><span class="icon fa-chevron-up"></span
+          ></a>
+          <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+          <a href="#" class="scrolly next"
             ><span class="icon fa-chevron-down"></span
           ></a>
         </div>
