--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
       <div class="inner">
         <h1>Temas</h1>
         <ol>
-          <li><a href="#uno">Agile</a></li>
+          <li><a href="#uno"></a></li>
           <li><a href="#dos"></a></li>
           <li><a href="#tres"></a></li>
-          <li><a href="#cuatro"></a></li>
+          <li><a href="#cuatro">Agile</a></li>
           <li><a href="#cinco"></a></li>
           <li><a href="#seis"></a></li>
           <li><a href="#siete"></a></li>
@@ -217,26 +217,26 @@
           <header>
             <!--Apuntar al html con el nombre de la clase-->
             <h2>
-              <a href="sites/RPC y RMI,TCP IP.html">RPC y RMI; TCP /IP</a>
+              <a href="sites/agile.html">Agile</a>
             </h2>
             <!--Fecha de la clase-->
-            <p class="info">22 de Mayo de 2020</p>
+            <p class="info">26 de Octubre de 2020</p>
           </header>
           <!--Pequeña descripcion del tema-->
           <p align="justify">
-            RPC y RMI son los mecanismos que permiten a un cliente invocar el
-            procedimiento o método desde el servidor mediante el establecimiento
-            de la comunicación entre el cliente y el servidor.
+            Es una serie de métodos y metodologías que ayudan a un equipo a
+            pensar de una manera más eficiente, eficaz y tomar decisiones que
+            como resultado sean productivas. También es una mentalidad, porque
+            la mentalidad correcta puede marcar una gran diferencia en cómo un
+            equipo utiliza las prácticas. Esta mentalidad ayuda a las personas
+            de un equipo a compartir información entre ellos, para que puedan
+            tomar decisiones importantes del proyecto juntos.
           </p>
-          <p align="justify">
-            TCP/IP es la identificación del grupo de protocolos de red que hacen
-            posible la transferencia de datos en redes, entre equipos
-            informáticos e internet.
-          </p>
+          
           <ul class="actions">
             <!--Apuntar al html con el nombre de la clase-->
             <li>
-              <a href="sites/RPC y RMI,TCP IP.html" class="button alt"
+              <a href="sites/agile.html" class="button alt"
                 >Leer mas</a
               >
             </li>
