--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <li><a href="#cuatro">Agile</a></li>
           <li><a href="#cinco"></a></li>
           <li><a href="#seis"></a></li>
-          <li><a href="#siete"></a></li>
+          <li><a href="#siete">Historia y Desarrollo Móvil</a></li>
           <li><a href="#ocho"></a></li>
         </ol>
       </div>
@@ -365,31 +365,35 @@
     <!--Cambiar id por el numero de clase-->
     <!--Cambiar clase style1 por style2 o style3 para cambiar de color de texto -->
     <article id="siete" class="post style2">
-      <div class="image">
+      <div class="image" >
         <!--Poner la foto con el nombre de la clase-->
-        <img src="images/ejec.jpg" alt="" data-position="75% center" />
+        <img src="images/HistoMov/intro.jpg" alt="" data-position="30% center" />
       </div>
       <div class="content">
         <div class="inner">
           <header>
             <!--Apuntar al html con el nombre de la clase-->
-            <h2><a href="sites/generic.html">Ejecutores y Fork/Join</a></h2>
+            <h2><a href="sites/generic.html">Historia y Desarrollo Móvil</a></h2>
             <!--Fecha de la clase-->
-            <p class="info">15 de Mayo del 2020</p>
+            <p class="info">26 de Octubre del 2020</p>
           </header>
           <!--Pequeña descripcion del tema-->
           <p align="justify">
-            Los ejecutores son un tipo de datos que viene implementado por Java
-            y tiene como objetivo la reutilización de los hilos. El framework
-            Fork/Join fue diseñado para la ejecución de tareas que pueden
-            dividirse en otras subtareas más pequeñas, ejecutándose estas en
-            paralelo y combinando posteriormente sus resultados para obtener el
-            resultado de la tarea única.
+            El teléfono, sin duda uno de los mayores inventos de la humanidad. 
+            Revolucionó las comunicaciones,
+            permitiéndonos llegar a grandes distancias y compartir pensamientos, 
+            ideas y sueños
+            , haciendo del mundo un lugar mucho más pequeño en el proceso.
+            De hecho, el teléfono es
+            probablemente una de las tecnologías más definitorias del siglo 
+            XX y el dispositivo electrónico más
+            utilizado en el mundo actual.
+            
           </p>
           <ul class="actions">
             <!--Apuntar al html con el nombre de la clase-->
             <li>
-              <a href="sites/Ejecutores.html" class="button alt">Leer Más</a>
+              <a href="sites/desarrollo.html" class="button alt">Leer Más</a>
             </li>
           </ul>
         </div>
