--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li><a href="#tres"></a></li>
           <li><a href="#cuatro">Agile</a></li>
           <li><a href="#cinco"></a></li>
-          <li><a href="#seis"></a></li>
+          <li><a href="#seis">Diseño y Desarrollo móvil</a></li>
           <li><a href="#siete">Historia y Desarrollo Móvil</a></li>
           <li><a href="#ocho"></a></li>
         </ol>
@@ -314,35 +314,30 @@
     <!-- sies -->
     <!--Cambiar id por el numero de clase-->
     <!--Cambiar clase style1 por style2 o style3 para cambiar de color de fondo -->
-    <article id="sies" class="post invert style1 alt">
+    <article id="seis" class="post invert style1 alt">
       <div class="image">
-        <img src="images/threads.jpg" alt="" data-position="10% center" />
+        <img src="images/Diseñoydesarrollo/diseño.png" alt="" width="100" height="100" data-position="80% center" />
       </div>
       <div class="content">
         <div class="inner">
           <header>
             <!--Apuntar al html con el nombre de la clase-->
             <h2>
-              <a href="sites/Hilos y Sincronizacion.html"
-                >Hilos y Sincronización</a
+              <a href="sites/diseñoydesarrollomovil.html"
+                >Diseño y Desarrollo móvil</a
               >
             </h2>
             <!--Fecha de la clase-->
-            <p class="info">10 de Mayo de 2020</p>
+            <p class="info">26 de Octubre de 2020</p>
           </header>
           <!--Pequeña descripcion del tema-->
-          <p>
-            Hilo (Thread): Un thread se puede considerar como la agrupación de
-            un trozo de programa junto con el conjunto de registros del
-            procesador que utiliza y una pila de máquina.<br />
-            Sincronización: Hablamos de la sincronización de datos como el
-            proceso de alineación entre los datos provenientes de diversas
-            fuentes, y su continua armonización en el tiempo.
+          <p align="justify">
+          El desarrollo móvil es muy importante para el futuro ya que es el  mayor medio de comunicación e información de nuestro tiempo. Una plataforma, posiblemente vea el éxito con relativamente ningún riesgo. Sin embargo, una vez que se empiece a intentar escalar esa estrategia, rápidamente se encontrará aumentando exponencialmente la cantidad de tiempo y esfuerzo necesario para tener éxito. Con una estrategia incorrecta, puede ser difícil de justificar y aún más difícil monetizar los costos de los dispositivos móviles.
           </p>
           <ul class="actions">
             <!--Apuntar al html con el nombre de la clase-->
             <li>
-              <a href="sites/Hilos y Sincronizacion.html" class="button alt"
+              <a href="sites/diseñoydesarrollomovil.html" class="button alt"
                 >Leer mas</a
               >
             </li>
