--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <li><a href="#cinco"></a></li>
           <li><a href="#seis">Diseño y Desarrollo móvil</a></li>
           <li><a href="#siete">Historia y Desarrollo Móvil</a></li>
-          <li><a href="#ocho"></a></li>
+          <li><a href="#ocho">Layout,vistas, Ciclo de vida, Estado </a></li>
         </ol>
       </div>
     </section>
@@ -410,39 +410,30 @@
     <!--Cambiar clase style1 por style2 o style3 para cambiar de color de fondo -->
     <article id="ocho" class="post invert style2 alt">
       <div class="image">
-        <img
-          src="images/4.jpg"
-          alt=""
-          width="70%"
-          height="159"
-          data-position="20% center"
-        />
+        <img src="images/Diseñoydesarrollo/layout.png" alt="" width="80" height="80" data-position="50% center" />
       </div>
       <div class="content">
         <div class="inner">
           <header>
             <!--Apuntar al html con el nombre de la clase-->
             <h2>
-              <a href="sites/RPC y RMI,TCP IP.html">RPC y RMI; TCP /IP</a>
+              <a href="sites/layout,vistas,ciclo.html">Layout,vistas, Ciclo de vida, Estado</a>
             </h2>
             <!--Fecha de la clase-->
-            <p class="info">22 de Mayo de 2020</p>
+            <p class="info">29 de Octubre de 2020</p>
           </header>
           <!--Pequeña descripcion del tema-->
           <p align="justify">
-            RPC y RMI son los mecanismos que permiten a un cliente invocar el
-            procedimiento o método desde el servidor mediante el establecimiento
-            de la comunicación entre el cliente y el servidor.
+            El ciclo de vida de una aplicación Android es bastante diferente al ciclo de vida de una aplicación en otros S.O., como Windows. La mayor diferencia es que, en Android el ciclo de vida es controlado principalmente por el sistema, en lugar de ser controlado directamente por el usuario.
           </p>
           <p align="justify">
-            TCP/IP es la identificación del grupo de protocolos de red que hacen
-            posible la transferencia de datos en redes, entre equipos
-            informáticos e internet.
+            Sin importar el enfoque que adoptes, debes asegurarte de que tu app cumpla con las expectativas
+de los usuarios con respecto al estado de la IU, y de que proporcione una IU fluida y ágil.
           </p>
           <ul class="actions">
             <!--Apuntar al html con el nombre de la clase-->
             <li>
-              <a href="sites/RPC y RMI,TCP IP.html" class="button alt"
+              <a href="sites/layout,vistas,ciclo.html" class="button alt"
                 >Leer mas</a
               >
             </li>
