--- a/sites/estado.html
+++ b/sites/estado.html
@@ -22,13 +22,13 @@
 		  </header>
 		  <div>
 			<a href="../index.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
-			<a href="Hilos y Sincronizacion.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
+			<a href="" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
 		  </div>
 
 		<!-- Main -->
 			<section id="main">
 				
-				<div class="inner"><span class="image fit"><img src="../images/Diseñoydesarrollo/arqui1.jpg"height="350"alt="" /></span>
+				<div class="inner"><span class="image fit"><img src="../images/Diseñoydesarrollo/movil.png"height="350"alt="" /></span>
 					<!--Usar el siguiente div para poner imagenes en el doc-->
 					<div class="image fit"></div>
 					<!--Poner toda la informacion de la clase-->
