--- a/sites/diseñoydesarrollomovil.html
+++ b/sites/diseñoydesarrollomovil.html
@@ -42,7 +42,7 @@
 					</header>
 					<!--Ingresar toda la informacion necesaria usando las diferentes etiquetas-->
                     <ol>
-					<li><a href="#two">Diseñar para el contexto</a></li>
+					<li><a href="Diseñarcontexto.html">Diseñar para el contexto</a></li>
 					
                     <li><a href="diseñoydesarrollomovil.html#thirteen">Desarrollar una estrategia móvil</a></li>
 					<li><a href="Arquitecturadeinformacionmovil.html">Arquitectura de información móvil</a></li>
