--- a/sites/Diseñarcontexto.html
+++ b/sites/Diseñarcontexto.html
@@ -137,7 +137,7 @@ situación actual?</li>
 </section>
 <div>
 				<a href="../index.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
-				<a href="diseñoydesarrollomovil.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
+				<a href="../index.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
 			  </div>
 		<!-- Footer -->
 			<footer id="footer">
