--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             de un equipo a compartir información entre ellos, para que puedan
             tomar decisiones importantes del proyecto juntos.
           </p>
-          
+
           <ul class="actions">
             <!--Apuntar al html con el nombre de la clase-->
             <li>
@@ -374,16 +374,16 @@
           </header>
           <!--Pequeña descripcion del tema-->
           <p align="justify">
-            El teléfono, sin duda uno de los mayores inventos de la humanidad. 
+            El teléfono, sin duda uno de los mayores inventos de la humanidad.
             Revolucionó las comunicaciones,
-            permitiéndonos llegar a grandes distancias y compartir pensamientos, 
+            permitiéndonos llegar a grandes distancias y compartir pensamientos,
             ideas y sueños
             , haciendo del mundo un lugar mucho más pequeño en el proceso.
             De hecho, el teléfono es
-            probablemente una de las tecnologías más definitorias del siglo 
+            probablemente una de las tecnologías más definitorias del siglo
             XX y el dispositivo electrónico más
             utilizado en el mundo actual.
-            
+
           </p>
           <ul class="actions">
             <!--Apuntar al html con el nombre de la clase-->
@@ -433,7 +433,7 @@ de los usuarios con respecto al estado de la IU, y de que proporcione una IU flu
           <ul class="actions">
             <!--Apuntar al html con el nombre de la clase-->
             <li>
-              <a href="sites/layout,vistas,ciclo.html" class="button alt"
+              <a href="sites/layout.html" class="button alt"
                 >Leer mas</a
               >
             </li>
