--- a/sites/layout.html
+++ b/sites/layout.html
@@ -42,7 +42,7 @@
 					</header>
 					<!--Ingresar toda la informacion necesaria usando las diferentes etiquetas-->
                     <ol>
-					<li><a href="layout,vistas,ciclo.html">Interfaz de Usuario</a></li>
+					<li><a href="layout.html">Interfaz de Usuario</a></li>
 					
                     <li><a href="">Estilos y Temas</a></li>
 					<li><a href="ciclo_de_vida.html">Ciclo de vida</a></li>
