--- a/sites/estado.html
+++ b/sites/estado.html
@@ -42,7 +42,7 @@
                     <ol>
 					<li><a href="layout.html">Interfaz de Usuario</a></li>
 					
-                    <li><a href="">Estilos y Temas</a></li>
+                    <li><a href="Estilosytemas.html">Estilos y Temas</a></li>
 					<li><a href="ciclo_de_vida.html">Ciclo de vida</a></li>
                     <li><a href="estado.html">Estado</a></li>
 									
