--- a/sites/Estilosytemas.html
+++ b/sites/Estilosytemas.html
@@ -22,7 +22,7 @@
 		  </header>
 		  <div>
 			<a href="../index.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
-			<a href="Hilos y Sincronizacion.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
+			<a href="ciclo_de_vida.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
 		  </div>
 
 		<!-- Main -->
@@ -196,7 +196,7 @@ Por ejemplo, si define el siguiente estilo:<img src="../images/Diseñoydesarroll
 			</section>
 			<div>
 				<a href="layout,vistas,ciclo.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
-				<a href="estado.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
+				<a href="ciclo_de_vida.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
 			  </div>
 		<!-- Footer -->
 			<footer id="footer">
