--- a/sites/Estilosytemas.html
+++ b/sites/Estilosytemas.html
@@ -21,7 +21,7 @@
 			>
 		  </header>
 		  <div>
-			<a href="../index.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
+			<a href="layout.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
 			<a href="ciclo_de_vida.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
 		  </div>
 
@@ -195,7 +195,7 @@ Por ejemplo, si define el siguiente estilo:<img src="../images/Diseñoydesarroll
 				
 			</section>
 			<div>
-				<a href="layout,vistas,ciclo.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
+				<a href="layout.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
 				<a href="ciclo_de_vida.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
 			  </div>
 		<!-- Footer -->
