--- a/sites/Arquitecturadeinformacionmovil.html
+++ b/sites/Arquitecturadeinformacionmovil.html
@@ -22,7 +22,7 @@
 		  </header>
 		  <div>
 			<a href="diseñoydesarrollomovil.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
-			<a href="Hilos y Sincronizacion.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
+			<a href="../index.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
 		  </div>
 
 		<!-- Main -->
@@ -284,7 +284,7 @@ Para presentar la cantidad máxima de información en la parte superior del "pli
 			</section>
 			<div>
 				<a href="diseñoydesarrollomovil.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
-				<a href="Hilos y Sincronizacion.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
+				<a href="../index.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
 			  </div>
 		<!-- Footer -->
 			<footer id="footer">
