Grupo 4 Historia y desarrollo movil

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 <div class="inner">
                     <header>
                         <!--Apuntar al html con el nombre de la clase-->
-                        <h2><a href="sites/generic.html">Historia y Desarrollo Móvil</a></h2>
+                        <h2><a href="sites/histomov.html">Historia y Desarrollo Móvil</a></h2>
                         <!--Fecha de la clase-->
                         <p class="info">26 de Octubre del 2020</p>
                     </header>
@@ -337,7 +337,7 @@
                     <ul class="actions">
                         <!--Apuntar al html con el nombre de la clase-->
                         <li>
-                            <a href="sites/desarrollo.html" class="button alt">Leer Más</a>
+                            <a href="sites/histomov.html" class="button alt">Leer Más</a>
                         </li>
                     </ul>
                 </div>
