--- a/index.html
+++ b/index.html
@@ -232,27 +232,26 @@
         <article id="cinco" class="post style1">
             <div class="image">
                 <!--Poner la foto con el nombre de la clase-->
-                <img src="images/Agile/poster.png" alt="" height="100" width="100" data-position="50% center" style="object-fit: cover;" />
+                <img src="images/Scrum/poster.png" alt="" height="100" width="100" data-position="50% center" style="object-fit: cover;" />
             </div>
             <div class="content">
                 <div class="inner">
                     <header>
                         <!--Apuntar al html con el nombre de la clase-->
                         <h2>
-                            <a href="sites/agile.html">Agile</a>
+                            <a href="sites/scrum.html">Scrum</a>
                         </h2>
                         <!--Fecha de la clase-->
                         <p class="info">26 de Octubre de 2020</p>
                     </header>
                     <!--Pequeña descripcion del tema-->
                     <p align="justify">
-                        Es una serie de métodos y metodologías que ayudan a un equipo a pensar de una manera más eficiente, eficaz y tomar decisiones que como resultado sean productivas. También es una mentalidad, porque la mentalidad correcta puede marcar una gran diferencia
-                        en cómo un equipo utiliza las prácticas. Esta mentalidad ayuda a las personas de un equipo a compartir información entre ellos, para que puedan tomar decisiones importantes del proyecto juntos.
+                        Scrum es un proceso en el que se aplican de manera regular un conjunto de buenas prácticas para trabajar colaborativamente, en equipo, y obtener el mejor resultado posible de un proyecto. Estas prácticas se apoyan unas a otras y su selección tiene origen en un estudio de la manera de trabajar de equipos altamente productivos.
                     </p>
                     <ul class="actions">
                         <!--Apuntar al html con el nombre de la clase-->
                         <li>
-                            <a href="sites/agile.html" class="button alt">Leer Mas</a
+                            <a href="sites/scrum.html" class="button alt">Leer Mas</a
               >
             </li>
           </ul>
