--- a/sites/Diseñarcontexto.html
+++ b/sites/Diseñarcontexto.html
@@ -16,8 +16,7 @@
 			>
 		  </header>
 		  <div>
-			<a href="../index.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
-			<a href="Hilos y Sincronizacion.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
+			<a href="diseñoydesarrollomovil.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
 		  </div>
 
 		<!-- Main -->
@@ -136,8 +135,8 @@ situación actual?</li>
          
 </section>
 <div>
-				<a href="../index.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
-				<a href="../index.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
+				
+				<a href="diseñoydesarrollomovil.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
 			  </div>
 		<!-- Footer -->
 			<footer id="footer">
