--- a/sites/layout.html
+++ b/sites/layout.html
@@ -21,8 +21,7 @@
 			>
 		  </header>
 		  <div>
-			<a href="../index.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
-			<a href="Hilos y Sincronizacion.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
+			<a href="Estilosytemas.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
 		  </div>
 
 		<!-- Main -->
@@ -242,8 +241,8 @@
 
 </section>
 			<div>
-				<a href="../index.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
-				<a href="Hilos y Sincronizacion.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
+				
+				<a href="Estilosytemas.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
 			  </div>
 		<!-- Footer -->
 			<footer id="footer">
