--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
           <ul class="actions">
             <!--Apuntar al html con el nombre de la clase-->
             <li>
-              <a href="sites/diseñoydesarrollomovil.html" class="button alt"
+              <a href="sites/Diseñarcontexto.html" class="button alt"
                 >Leer mas</a
               >
             </li>
