--- a/index.html
+++ b/index.html
@@ -229,10 +229,10 @@
         <!-- cinco -->
         <!--Cambiar id por el numero de clase-->
         <!--Cambiar clase style1 por style2 o style3 para cambiar de color de texto -->
-        <article id="cinco" class="post style1">
+        <article id="cinco" class="post invert style1">
             <div class="image">
                 <!--Poner la foto con el nombre de la clase-->
-                <img src="images/Scrum/poster.png" alt="" height="100" width="100" data-position="50% center" style="object-fit: cover;" />
+                <img src="images/Scrum/poster.jpg" alt="" height="100" width="100" data-position="50% center" style="object-fit: cover;" />
             </div>
             <div class="content">
                 <div class="inner">
