--- a/sites/scrum.html
+++ b/sites/scrum.html
@@ -26,7 +26,7 @@
     </header>
 
     <div>
-        <a href="scrum.html" style="float: right; background-color: black; padding: 1rem">Siguiente</a
+        <a href="sites/diseñoydesarrollomovil.html" style="float: right; background-color: black; padding: 1rem">Siguiente</a
       >
     </div>
     <!-- Main -->
