--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
 <!DOCTYPE html>
-<!--
-	Binary by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
-
 <head>
     <title>Aplicaciones Móviles</title>
     <meta charset="utf-8" />
@@ -16,8 +10,7 @@
 <body>
     <!-- Header -->
     <header id="header">
-        <a href="index.html" class="logo"><strong>Aplicaciones Móviles</strong></a
-      >
+        <a href="index.html" class="logo"><strong>Aplicaciones Móviles</strong></a>
     </header>
 
     <!-- Banner -->
@@ -28,7 +21,7 @@
           Septimo Nivel.
         </h1>
         <ul class="actions">
-          <li><a href="#uno" class="button alt0 scrolly big">Continuar</a></li>
+            <li><a href="#uno" class="button alt0 scrolly big">Continuar</a></li>
         </ul>
         </div>
         </section>
@@ -37,21 +30,13 @@
                 <h1>Temas</h1>
                 <ol>
                     <li><a href="#uno">Entorno Móvil</a></li>
-                    <li>
-                        <a href="#dos"></a>
-                    </li>
-                    <li>
-                        <a href="#tres"></a>
-                    </li>
+                    <li><a href="#dos">Framework, IDE</a></li>
+                    <li><a href="#tres"></a></li>
                     <li><a href="#cuatro">Agile</a></li>
-                    <li>
-                        <a href="#cinco">Scrum</a>
-                    </li>
+                    <li><a href="#cinco">Scrum</a></li>
                     <li><a href="#seis">Diseño y Desarrollo móvil</a></li>
                     <li><a href="#siete">Historia y Desarrollo Móvil</a></li>
-                    <li>
-                        <a href="#ocho"></a>
-                    </li>
+                    <li><a href="#ocho"></a></li>
                 </ol>
             </div>
         </section>
@@ -75,24 +60,20 @@
                     </header>
                     <!--Pequeña descripcion del tema-->
                     <p align="justify">
-                        Una aplicación móvil es un programa que usted puede descargar y al que puede acceder directamente desde su teléfono o desde algún otro aparato móvil – como por ejemplo una tablet o un reproductor MP3.
+                        Una aplicación móvil es un programa que usted puede descargar y al que puede
+                        acceder directamente desde su teléfono o desde algún otro aparato móvil
+                        como por ejemplo una tablet o un reproductor MP3.
                     </p>
                     <ul class="actions">
                         <!--Apuntar al html con el nombre de la clase-->
-                        <li>
-                            <a href="sites/entornoMovil.html" class="button alt">Leer Mas</a
-              >
-            </li>
-          </ul>
-        </div>
-        <div class="postnav">
-          <!--Poner el numero de id anterior-->
-          <a href="#" class="prev disabled"
-            ><span class="icon fa-chevron-up"></span
-          ></a>
-                            <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
-                            <a href="#dos" class="scrolly next"><span class="icon fa-chevron-down"></span
-          ></a>
+                        <li><a href="sites/entornoMovil.html" class="button alt">Leer Mas</a></li>
+                    </ul>
+                </div>
+                <div class="postnav">
+                    <!--Poner el numero de id anterior-->
+                    <a href="#" class="prev disabled"><span class="icon fa-chevron-up"></span></a>
+                    <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+                    <a href="#dos" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
                 </div>
             </div>
         </article>
@@ -102,45 +83,35 @@
         <!--Cambiar clase style1 por style2 o style3 para cambiar de color de fondo -->
         <article id="dos" class="post invert style1 alt">
             <div class="image">
-                <img src="images/threads.jpg" alt="" data-position="10% center" />
+                <img src="images/Framework/framework.png" alt="" data-position="10% center" />
             </div>
             <div class="content">
                 <div class="inner">
                     <header>
                         <!--Apuntar al html con el nombre de la clase-->
                         <h2>
-                            <a href="sites/Hilos y Sincronizacion.html">Hilos y Sincronización</a
-              >
-            </h2>
-            <!--Fecha de la clase-->
-            <p class="info">10 de Mayo de 2020</p>
-          </header>
-          <!--Pequeña descripcion del tema-->
-          <p>
-            Hilo (Thread): Un thread se puede considerar como la agrupación de
-            un trozo de programa junto con el conjunto de registros del
-            procesador que utiliza y una pila de máquina.<br />
-            Sincronización: Hablamos de la sincronización de datos como el
-            proceso de alineación entre los datos provenientes de diversas
-            fuentes, y su continua armonización en el tiempo.
-          </p>
-          <ul class="actions">
-            <!--Apuntar al html con el nombre de la clase-->
-            <li>
-              <a href="sites/Hilos y Sincronizacion.html" class="button alt"
-                >Leer mas</a
-              >
-            </li>
-          </ul>
-        </div>
-        <div class="postnav">
-          <!--Poner el numero de id anterior-->
-          <a href="#uno" class="scrolly prev"
-            ><span class="icon fa-chevron-up"></span
-          ></a>
-                            <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
-                            <a href="#tres" class="scrolly next"><span class="icon fa-chevron-down"></span
-          ></a>
+                            <a href="sites/framework.html">Framework, IDE</a>
+                        </h2>
+                        <!--Fecha de la clase-->
+                        <p class="info">22 de Octubre de 2020</p>
+                    </header>
+                    <!--Pequeña descripcion del tema-->
+                    <p>
+                        Framework. Esquema o estructura que se establece y que se aprovecha para
+                        desarrollar y organizar un software determinado.<br>
+                        IDE. Sistema de software para el diseño de aplicaciones que combina
+                        herramientas del desarrollador comunes en una sola interfaz gráfica de usuario.
+                    </p>
+                    <ul class="actions">
+                        <!--Apuntar al html con el nombre de la clase-->
+                        <li><a href="sites/framework.html" class="button alt">Leer mas</a></li>
+                    </ul>
+                </div>
+                <div class="postnav">
+                    <!--Poner el numero de id anterior-->
+                    <a href="#uno" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
+                    <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+                    <a href="#tres" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
                 </div>
             </div>
         </article>
